--- a/.github/workflows/test-and-publish.yml
+++ b/.github/workflows/test-and-publish.yml
@@ -49,6 +49,8 @@ jobs:
         with:
           ruby-version: '2.7'
 
+      - name: List Dir Contents
+        run: ls -l
       - name: Publish to GPR
         run: |
           mkdir -p $HOME/.gem
