--- a/.github/workflows/test-and-publish.yml
+++ b/.github/workflows/test-and-publish.yml
@@ -43,7 +43,7 @@ jobs:
 
   publish:
     # needs: test
-    # if: github.ref == 'refs/heads/main' && github.event_name == 'push' && success()
+    if: github.ref == 'refs/heads/main' && github.event_name == 'push' && success()
     runs-on: ubuntu-latest
 
     steps:
